add rate limiting, sentry contract and kvkk masking